--- a/landing/index.html
+++ b/landing/index.html
@@ -95,14 +95,16 @@
         .logo-icon {
             width: 32px;
             height: 32px;
-            background: var(--gradient);
-            border-radius: 6px;
             display: flex;
             align-items: center;
             justify-content: center;
-            color: white;
-            font-weight: bold;
             margin-right: 8px;
+        }
+
+        .logo-icon img {
+            width: 100%;
+            height: 100%;
+            object-fit: contain;
         }
 
         .logo-text {
@@ -558,7 +560,9 @@
             <div class="footer-content">
                 <div class="footer-column">
                     <div class="logo-lockup" style="margin-bottom: 16px;">
-                        <div class="logo-icon">d</div>
+                        <div class="logo-icon">
+                            <img src="images/logo.png" alt="logo" />
+                        </div>
                         <div class="logo-text">decentrifi</div>
                     </div>
                     <p style="color: rgba(42, 46, 61, 0.6); font-size: 14px;">
