Add marketing overview and update social links in footer
Introduced a detailed marketing overview document outlining Decentrifi's vision, features, and technical stack. Updated the footer on the landing page with accurate Discord, GitHub, and LinkedIn links to improve accessibility to key resources.

--- a/landing/index.html
+++ b/landing/index.html
@@ -1724,10 +1724,9 @@
                 </div>
                 <div class="footer-column">
                     <h4 class="footer-title">Social</h4>
-                    <a href="#" class="footer-link">Twitter</a>
-                    <a href="#" class="footer-link">Discord</a>
-                    <a href="#" class="footer-link">GitHub</a>
-                    <a href="#" class="footer-link">LinkedIn</a>
+                    <a href="https://discord.gg/emAQ5bA7" class="footer-link">Discord</a>
+                    <a href="https://github.com/qkyrie/decentrifi" class="footer-link">GitHub</a>
+                    <a href="https://www.linkedin.com/company/decentrifi/" class="footer-link">LinkedIn</a>
                 </div>
             </div>
             <div class="footer-bottom">
