Add roadmap page and update navigation links.
Introduced a new roadmap page detailing future plans and milestones. Updated navigation and footer links to include the roadmap for better visibility and user accessibility.

--- a/landing/index.html
+++ b/landing/index.html
@@ -1324,6 +1324,7 @@
                     <ul class="nav-links" id="nav-links">
                         <li><a href="#product">Product</a></li>
                         <li><a href="#how-it-works">How It Works</a></li>
+                        <li><a href="roadmap.html">Roadmap</a></li>
                         <li><a href="https://data.decentri.fi/ethereum/0x59a0f98345f54bab245a043488ece7fcecd7b596" class="demo-nav-link">Safe Analytics</a></li>
                         <li><a href="https://data.decentri.fi/ethereum/0x881d40237659c251811cec9c364ef91dc08d300c" class="demo-nav-link">Demo</a></li>
                     </ul>
@@ -1731,8 +1732,7 @@
                     <h4 class="footer-title">Product</h4>
                     <a href="#" class="footer-link">Features</a>
                     <a href="https://data.decentri.fi/ethereum/0x59a0f98345f54bab245a043488ece7fcecd7b596" class="footer-link">Safe Analytics</a>
-                    <a href="#" class="footer-link">API Documentation</a>
-                    <a href="#" class="footer-link">Roadmap</a>
+                    <a href="roadmap.html" class="footer-link">Roadmap</a>
                     <a href="#" class="footer-link">Status</a>
                 </div>
                 <div class="footer-column">
